--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,6 +48,25 @@
 		width: 13em;
 		background: #141;
 
+		form, div {
+			display: inline;
+		}
+
+		input {
+			font-size: small;
+		}
+
+		#cart {
+			font-size: smaller;
+			color: white;
+
+			table {
+				border-top: 1px dotted #595;
+				border-bottom: 1px dotted #595;
+				margin-bottom: 10px;
+			}
+		}
+
 		p {
 			color: #bfb;
 			font_size: small;
@@ -64,5 +83,41 @@
 
 			}
 		}
+	}
+}
+
+.depot_form {
+	fieldset {
+		background: #efe;
+
+		legend {
+		  color: #dfd;
+		  background: #141;
+		  font-family: sans-serif;
+		  padding: 0.2em 1em;
+		}
+	}
+
+	form {
+	  label {
+	    width: 5em;
+	    float: left;
+	    text-align: right;
+	    padding-top: 0.2em;
+	    margin-top: 0.1em;
+	    display: block;
+	  }
+
+	  select, textarea, input {
+	    margin-left: 0.5;
+	  }
+
+	  .submit {
+	    margin-left: 4em;
+	  }
+
+	  br {
+	   display: none;
+	  }
 	}
 }
