added atom feeder and Orders page"

--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -8,5 +8,8 @@
 		
 	</tr>
 </table>
+<% if @order.nil? %>
 <%= button_to 'Checkout', new_order_path, method: :get %>
+<% else %>
+<% end %>
 <%= button_to 'Empty cart', cart, method: :delete,remote: true, data: { confirm: 'Are you sure?'} %>
