Finished iteration H1, adding mailer actions

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -25,7 +25,8 @@
   </div>
   <div class="field">
     <%= f.label :pay_type %><br>
-    <%= select_tag 'payment_id', options_for_select(@payments.collect{ |p| [p.type, p.id] }) %>
+    <%= f.select(:pay_type, options_for_select(@payments.collect {|p|  p.type }, { include_blank: true })) %>
+
   </div>
   
   <div class="actions">
