--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -6,5 +6,8 @@
 	<td><%= line_item.quantity %>&times;</td>
 	<td><%= line_item.product.title %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
+	<% if @current_item %>
 	<td><%= button_to 'X', line_item, method: :delete  %></td>
+	<% else %>
+	<% end %>
 </tr>
