--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -6,6 +6,7 @@
 	<td><%= line_item.quantity %>&times;</td>
 	<td><%= line_item.product.title %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
-	<td><%= button_to 'X', line_item, method: :delete unless line_item.blank? #fails test_shipped for some reason. Probably because the customer can still delete items %></td>
+	<!-- <td> button_to 'X', line_item, method: :delete unless line_item.blank?  </td> -->
+	<!-- #fails test_shipped for some reason. Probably because the customer can still delete items -->
 
 </tr>
