--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,11 +28,24 @@
 			<li><a href="http://www..../news">News</a></li>
 			<li><a href="http://www..../contact">Contact</a></li>
 		</ul>
-		<p><%= Time.now %></p>
+	
+	<% if session[:user_id] %>
+		<ul>
+			<li><%= link_to 'Orders', orders_path %></li>
+			<li><%= link_to 'Products', products_path %></li>
+			<li><%= link_to 'Users', users_path %></li>
+		</ul>
+		<%= button_to 'Logout', logout_path, method: :delete %>
+		<% else %>
+		<%= button_to 'Login', login_path, method: :create %>
+
+	<% end %>
 	</div>
+
 	<div id="main">
 		<%= yield %>
 	</div>
+
 </div>
 </body>
 </html>
