--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,4 +1,4 @@
-<h2>Your cart</h2>
+<h2><%= t('.title') %></h2>
 <table>
 	<%= render(cart.line_items) %>
 
@@ -9,7 +9,7 @@
 	</tr>
 </table>
 <% if @order.nil? %>
-<%= button_to 'Checkout', new_order_path, method: :get %>
+<%= button_to t('.checkout'), new_order_path, method: :get %>
 <% else %>
 <% end %>
-<%= button_to 'Empty cart', cart, method: :delete,remote: true, data: { confirm: 'Are you sure?'} %>
+<%= button_to t('.empty'), cart, method: :delete,remote: true, data: { confirm: 'Are you sure?'} %>
