--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,15 @@
 
 <body class='<%= controller.controller_name %>'>
 <div id="banner">
+	<%= form_tag store_path, class: 'locale' do %>
+	<%= select_tag 'set_locale',
+	options_for_select(LANGUAGES, I18n.locale.to_s),
+	 onchange: 'this.form.submit()' %>
+	<%= submit_tag 'submit', class: 'locale_input' %>
+	<%= javascript_tag "$(.locale_input).hide()" %>
+	<% end %>
 	<%= image_tag("logo.png") %>
-	<%= @page_title || "Pragmatic Bookshelf" %>
+	<%= @page_title || t('.title') %>
 </div>
 <div id="columns">
 	<div id="side">
@@ -23,10 +30,10 @@
 	  </div>
 	  
 		<ul>
-			<li><a href="http://www....">Home</a></li>
-			<li><a href="http://www..../faq">Questions</a></li>
-			<li><a href="http://www..../news">News</a></li>
-			<li><a href="http://www..../contact">Contact</a></li>
+			<li><a href="http://www...."><%= t('.home') %></a></li>
+			<li><a href="http://www..../faq"><%= t('.questions') %></a></li>
+			<li><a href="http://www..../news"><%= t('.news') %></a></li>
+			<li><a href="http://www..../contact"><%= t('.contact') %></a></li>
 		</ul>
 	
 	<% if session[:user_id] %>
@@ -45,6 +52,12 @@
 	<div id="main">
 		<%= yield %>
 	</div>
+	
+	<script>
+	$(document).ready(function(){
+		$(.locale_input).hide();
+	});
+	</script
 
 </div>
 </body>
