--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -3,8 +3,9 @@
 <% end %>
 <% if  @count > 5 %>
 	<p> <%= pluralize session[:counter], 'time' %></p>
+	<% else %>
 <% end %>
-<h1>Your Pragmatic Catalog</h1>
+<h1><%= t('.title_html')%></h1>
 
 <% cache ['store', Product.latest] do %>
 	<% @products.each do |product| %>
@@ -15,7 +16,7 @@
 			<%= sanitize(product.description) %>
 			<div class="price_line">
 				<span class="price"><%= number_to_currency(product.price) %></span>
-				<%= button_to 'Add to Cart', line_items_path(product_id: product), remote: true %>
+				<%= button_to t('.add_html'), line_items_path(product_id: product), remote: true %>
 			</div>
 		</div>
 		<% end %>
